fix: resolve restaurant card rendering and TypeScript type errors
- Fix incorrect API response path navigation for Swiggy API
  * Changed from restaurantData.data.cards[2].data.data.cards to proper path
  * Use .find() to locate correct card with restaurant data

- Add TypeScript type definitions for Restaurant data structure
  * Define Restaurant interface with info, cuisines, rating, etc.
  * Explicitly type useState<Restaurant[]> to fix 'never' type error
  * Add type annotation to filter callback parameter

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "ESNext",
     "target": "ESNext",
+    "resolveJsonModule": true,
     // "types": [],
     // For nodejs:
     "lib": ["ESNext", "DOM"],
@@ -40,7 +41,7 @@
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
-    "moduleResolution": "node",
+    // "moduleResolution": "node",
     "esModuleInterop": true,
 
   },
