--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "devDependencies": {
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.24",
     "parcel": "^2.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^6.22.3"
