--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "jest",
+    "watch-test": "jest --watch",
     "start": "npx parcel index.html",
     "build": "npx parcel build index.html"
   },
